<resources>
    <string name="app_name">Nomad</string>
    <string name="splash_app_slogan">Choose a place to work based\non what you feel like today!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="copyright_text">Copyright 2018, Nomad</string>
    <string name="sign_in">Sign In</string>
    <string name="pager_text1">Find more than a community of shared work spaces...</string>
    <string name="pager_text2">Choose places to work based on what you feel like...</string>
    <string name="pick_image_from">PICK IMAGE FROM</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="or">OR</string>
    <string name="also_sign_in">You can also sign in with</string>
    <string name="to_account">to your account</string>
    <string name="sign_in_caps">SIGN IN</string>
    <string name="connection_error_msg">Connection Error!</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="session_expired">Your session has been expired. Please login again.</string>
    <string name="login">Login</string>
    <string name="check_internet_connection_msg">Check Internet Connection!</string>
    <string name="fetch_location_negative">Unable to fetch location.</string>
    <string name="my_profile_caps">MY PROFILE</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email_id">EMAIL ID</string>
    <string name="city_location">CITY/LOCATION</string>
    <string name="suburb">Suburb</string>
    <string name="change_pic">CHANGE PICTURE</string>
    <string name="edit">EDIT</string>
    <string name="done">DONE</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="subscription_plan">SUBSCRIPTION PLAN</string>
    <string name="subscription_expire_text">Your subscription plan will expire on %s</string>
    <string name="facebook_app_id">246033599429053</string>
    <string name="no_record_found">No record found.</string>
    <string name="fb_login_protocol_scheme">fb246033599429053</string>
    <string name="username_empty_error">Please enter username.</string>
    <string name="email_invalid_error">Not a valid email address.</string>
    <string name="start_time_end_time_error">End time must be greater that start time.</string>
    <string name="password_empty_error">Please enter password.</string>
    <string name="old_password">OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="confirm_new_password">CONFIRM NEW PASSWORD</string>
    <string name="update">UPDATE</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="email_notification">EMAIL NOTIFICATION</string>
    <string name="push_notification">Push notification</string>
    <string name="email_notification_desc">Receive weekly email notification</string>
    <string name="push_notification_desc">Receive weekly push notification</string>

    <string name="operation_times">%s %s - %s</string>
    <string name="today_times">%s - $s</string>

    <string name="google_map_key">AIzaSyAEOyfGgauWfR4sgeYf33amlahhsNc57mg</string>
    <string name="favourites">Favourites</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="hours">Hours</string>
    <string name="day">Day</string>
    <string name="meeting_space_available">Meeting Space Available</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="old_password_empty_error">Please enter old password.</string>
    <string name="new_password_empty_error">Please enter ner password.</string>
    <string name="confirm_password_empty_error">Please enter confirm password.</string>
    <string name="password_mismatch_error">Password do not match.</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="about_us">ABOUT US</string>
    <string name="term_condition">TERMS AND CONDITIONS</string>
    <string name="notifiaction_setting">NOTIFICATION SETTING</string>
    <string name="my_venues">MY VENUES</string>
    <string name="my_bookings">MY BOOKINGS</string>
    <string name="venue_no">%d venues</string>

    <string name="past_logs">Past Logs</string>
    <string name="upcoming_bookings">Upcoming Bookings</string>
    <string name="past_bookings">Past Bookings</string>
    <string name="meeting_space">Meeting Space</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="discover_workspace">Discover Workspaces</string>
    <string name="now">Now- </string>
    <string name="result">Result %d</string>


    <string name="filters">Filters</string>
    <string name="amenities">Amenities</string>
    <string name="meeting_spaces">Meeting Spaces</string>
    <string name="optional_catering_packages">Optional Catering Packages</string>
    <string name="meeting_space_type">Meeting Space Type</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="hours_minutes_format">%s:%s</string>
    <string name="date_format">%s/%s/%s</string>
    <string name="end_time_small_error">End Time should be greater than start time.</string>
    <string name="special_date_format">%s-%s-%s</string>
    <string name="start_time_big_error">Start Time should be smaller than end time.</string>
    <string name="start_time_not_valid_error">Start time is not valid.</string>
    <string name="end_time_not_valid_error">End time is not valid.</string>
    <string name="confirm_meeting_space">Confirm Meeting Space</string>
    <string name="booking_date_time">Booking Date/Time</string>
    <string name="catering_package_charges">Catering Package Charges</string>
    <string name="confirm">Confirm</string>
    <string name="amount_to_be_paid">Amount to be paid\u0020\u0020</string>
    <string name="per_hr">\u0020per hr</string>
    <string name="per_person">\u0020per person</string>
    <string name="yes_meeting_space_is">Yes, this meeting space is\u0020</string>
    <string name="no_meeting_space_is">No, this meeting space is\u0020</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>
    <string name="booking_confirmed_msg">Your booking has been\nconfirmed</string>
    <string name="payment_option">Payment options</string>
    <string name="amount_to_paid">Amount to be paid</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="distance">%s km</string>
    <string name="saved_cards">saved cards</string>
    <string name="add_new_card">add new card</string>
    <string name="cvv">cvv</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_card">Name on card</string>
    <string name="user_name_format">%s %s</string>
    <string name="expiry_date">Expiry date</string>
    <string name="save_card_for_faster_payment">Save this card for faster payment.</string>
    <string name="date_empty_error">Please select date first.</string>
    <string name="bill_amount">$%s</string>
    <string name="first_name_empty_error">Please enter first name.</string>
    <string name="last_name_empty_error">Please enter last name.</string>
    <string name="suburb_empty_error">Please select a suburb.</string>
    <string name="city_empty_error">Please select a city.</string>
    <string name="select_city">Select city</string>
    <string name="select_suburb">Select suburb</string>
    <string name="closed">CLOSED</string>
    <string name="venue_closed_today">Venue is closed today.</string>
    <string name="check_in_time_no_valid">It is not a valid check in time.</string>
    <string name="no_meeting_space_available">No meeting space available.</string>
    <string name="logo_text">Your work, your way.</string>
    <string name="start_time_empty_error">Please select start time.</string>
    <string name="end_time_empty_error">Please select ent time.</string>


</resources>
