<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/_10sdp"
    android:paddingRight="@dimen/_10sdp"
    android:paddingTop="@dimen/_10sdp"
    android:background="@drawable/curve_shape_dialog"
    android:paddingBottom="@dimen/_20sdp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>
    <com.nomad.customview.NMGTextView
        android:textColor="@color/colorBlackText"
        android:id="@+id/txtAlertText"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:text="@string/pick_image_from"
        app:fontName="nomad_font_bold.ttf"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_below="@id/txtAlertText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <com.nomad.customview.NMGButton
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/round_corner_black_button"
            android:text="@string/camera"
            android:layout_marginRight="@dimen/_5sdp"
            app:fontName="nomad_font_bold.ttf"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_10sdp"/>
        <com.nomad.customview.NMGButton
            android:id="@+id/btnGallery"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/round_corner_button_black"
            android:text="@string/gallery"
            android:layout_marginLeft="@dimen/_5sdp"
            app:fontName="nomad_font_bold.ttf"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_10sdp"/>
    </LinearLayout>



</RelativeLayout>