<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar_lay"
        layout="@layout/collapsed_toolbar_with_bg"/>
    <LinearLayout
        android:layout_below="@id/toolbar_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp"
        tools:context=".activity.FilterActivity"
        android:animateLayoutChanges="true"
        >

        <com.nomad.customview.NMGCheckBox
            android:id="@+id/checkBoxFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/favourites"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_10sdp"
            android:theme="@style/AppCheckBoxTheme"
            app:fontName="nomad_font_bold.ttf" />

        <com.nomad.customview.NMGTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="Availability"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_10sdp"
            app:fontName="nomad_font_bold.ttf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:weightSum="2">

            <com.nomad.customview.NMGTextView
                android:id="@+id/day_filter_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/day_hour_filter_left_bg_transition"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/day"
                android:textAllCaps="true"
                android:textColor="@color/day_hour_filter_txt_selector"
                android:textSize="@dimen/_10sdp"
                app:fontName="nomad_font_bold.ttf" />

            <com.nomad.customview.NMGTextView
                android:id="@+id/hour_filter_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/day_hour_filter_right_bg_transition"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/hours"
                android:textAllCaps="true"
                android:textColor="@color/day_hour_filter_txt_selector"
                android:textSize="@dimen/_10sdp"
                app:fontName="nomad_font_bold.ttf" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/day_hour_filter_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp">

            <LinearLayout
                android:id="@+id/hours_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:visibility="gone"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/lnrLayStartTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.nomad.customview.NMGTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Start Time"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/_10sdp"
                        app:fontName="nomad_font_medium.ttf" />

                    <com.nomad.customview.NMGTextView
                        android:id="@+id/txtStartTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@drawable/hour_filter_txt_bg"
                        android:drawableLeft="@drawable/ic_clock"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableTint="@color/colorBlack"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_8sdp"

                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_12sdp"
                        app:fontName="nomad_font_medium.ttf" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnrLayEndTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.nomad.customview.NMGTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="End Time"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/_10sdp"
                        app:fontName="nomad_font_medium.ttf" />

                    <com.nomad.customview.NMGTextView
                        android:id="@+id/txtEndTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@drawable/hour_filter_txt_bg"
                        android:drawableLeft="@drawable/ic_clock"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableTint="@color/colorBlack"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_8sdp"

                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_12sdp"
                        app:fontName="nomad_font_medium.ttf" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/day_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.nomad.customview.NMGCheckBox
                        android:id="@+id/day_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_10sdp"
                        android:theme="@style/AppCheckBoxTheme"
                        app:fontName="nomad_font_regular.ttf" />

                    <com.nomad.customview.NMGCheckBox
                        android:id="@+id/day_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/tuesday"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_10sdp"
                        android:theme="@style/AppCheckBoxTheme"
                        app:fontName="nomad_font_regular.ttf" />

                    <com.nomad.customview.NMGCheckBox
                        android:id="@+id/day_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/wednesday"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_10sdp"
                        android:theme="@style/AppCheckBoxTheme"
                        app:fontName="nomad_font_regular.ttf" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.nomad.customview.NMGCheckBox
                        android:id="@+id/day_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_10sdp"
                        android:theme="@style/AppCheckBoxTheme"
                        app:fontName="nomad_font_regular.ttf" />

                    <com.nomad.customview.NMGCheckBox
                        android:id="@+id/day_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/friday"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_10sdp"
                        android:theme="@style/AppCheckBoxTheme"
                        app:fontName="nomad_font_regular.ttf" />

                    <com.nomad.customview.NMGCheckBox
                        android:id="@+id/day_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/saturday"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_10sdp"
                        android:theme="@style/AppCheckBoxTheme"
                        app:fontName="nomad_font_regular.ttf" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.nomad.customview.NMGCheckBox
                        android:id="@+id/day_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_10sdp"
                        android:theme="@style/AppCheckBoxTheme"
                        app:fontName="nomad_font_regular.ttf" />

                </LinearLayout>
            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <com.nomad.customview.NMGCheckBox
        android:id="@+id/meeting_space_avail_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meeting_space_available"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        android:theme="@style/AppCheckBoxTheme"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_100sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        app:fontName = "nomad_font_bold.ttf"
        />


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="@dimen/_50sdp"
    android:orientation="horizontal"
    android:layout_centerHorizontal="true"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="@dimen/_30sdp"

    >
    <com.nomad.customview.NMGButton
        android:id="@+id/apply_btn"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_black_button"
        android:elevation="@dimen/_3sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/apply"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14sdp"
        app:fontName="nomad_font_bold.ttf"

        />
    <com.nomad.customview.NMGButton
        android:id="@+id/reset_btn"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_black_button"
        android:elevation="@dimen/_3sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/reset"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14sdp"
        app:fontName="nomad_font_bold.ttf"
        android:layout_marginLeft="@dimen/_30sdp"

        />
</LinearLayout>
</RelativeLayout>
</layout>