<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OnBoardingActivity">

    <ImageView
        android:id="@+id/imgNomadLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_60sdp"
        android:tint="@color/colorOrange"
        android:elevation="@dimen/_1sdp"
        android:src="@drawable/logo" />
    <com.nomad.customview.NMGTextView
        android:id="@+id/txtLogoText"
        android:text="@string/logo_text"
        android:layout_below="@+id/imgNomadLogo"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:elevation="@dimen/_1sdp"
        app:fontName="font_bold.otf"
        android:textColor="@color/colorOrange"
        android:textSize="@dimen/_16sdp"
        android:layout_height="wrap_content" />

    <com.nomad.customview.NMGButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/round_corner_black_button"
        android:elevation="@dimen/_1sdp"
        android:onClick="onSignIn"
        android:paddingBottom="@dimen/_18sdp"
        android:paddingTop="@dimen/_18sdp"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14sdp"
        app:fontName="font_bold.otf" />

    <com.nomad.customview.NMGTextView
        android:id="@+id/txtCopyRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:elevation="@dimen/_1sdp"
        android:visibility="gone"
        android:text="@string/copyright_text"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_11sdp"
        app:fontName="nomad_font_regular.ttf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:layout_above="@+id/btnSignIn"
        android:elevation="@dimen/_1sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgPaginationDot1"
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            android:padding="@dimen/_3sdp"

            android:src="@drawable/pagination_dot_selected" />

        <ImageView
            android:id="@+id/imgPaginationDot2"
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            android:padding="@dimen/_3sdp"

            android:src="@drawable/pagination_dot_notselected" />

    </LinearLayout>

    <com.nomad.customview.NMGCircularViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:pageCount="2" />

</RelativeLayout>